# tetris

./: LICENSE  README.md  stack.yaml  tetris.cabal
app/: Main.hs
src/: Tetris.hs
