name:                tetris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nhalford/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Halford
maintainer:          noah.halford@gmail.com
copyright:           2017 Noah Halford
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- data-files:          data/Tetris.wav

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
  build-depends:       base >= 4.7 && < 5
                       , wx
                       , wxcore
                       , array
                       , random
                       , reactive-banana
                       , reactive-banana-wx
--                       , filepath
  default-language:    Haskell2010
--  other-modules:       Paths

executable tetris-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , tetris
                     , wx
                     , wxcore
  default-language:    Haskell2010

test-suite tetris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tetris
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nhalford/tetris
